2007-04-12  Quentin Mathe <qmathe@club-internet.fr>

    * Controller.h:
    * Controller.m (-[NSApplication menuBarWindowFrame]): New method to be used
    by EtoileWildMenus through DO.

2007-03-27  Quentin Mathe <qmathe@club-internet.fr>

    * Subprojects/AboutEtoileEntry/English.lproj/AboutEtoileEntry.gorm: Added 
    2007 to copyright years. Fixed 'Etoile Project' mention to simply talk of
    of Étoilé with accented characters. Fixed GPL license mention by replacing
    it with Jesse's idea. Improved info area layout to better accommodate long
    hostnames and kernel version (without cutting them off most of time).

2007-03-27  Yen-Ju Chen <yjchenx gmail>

	* Subprojects/AboutEtoileEntry/ETMachineInfo_Linux.m:
	Add my G4 CPU identifier.

2007-03-27  Quentin Mathe <qmathe@club-internet.fr>

    Time to commit an old patch (with minor tweaks) proposed on May 19, 2006. 
    Override David's untested fix introduced on r1563.
    * Subprojects/AboutEtoileEntry/ETMachineInfo.m: Added spacing between value 
    and unit.
    * Subprojects/AboutEtoileEntry/ETMachineInfo_Linux.m: Modified to support 
    PowerPC architecture by parsing specific fields in /proc/cpuinfo. 

2007-03-14  Yen-Ju Chen <yjchenx gmail>

	* Show a calendar if clock is clicked.
          For some reason, actions does not work. Weird.
	* Fix up compilation.

2007-03-06  Quentin Mathe <qmathe@club-internet.fr>

	* Controller.m (-windowDidMove:): Commented out code to reset frame if the
	menu window has moved. Temporary solution to make possible the use of 
	MenuServer in GNOME or KDE context (useful for debugging).

2007-03-04  Yen-Ju Chen <yjchenx gmail>

    * Do not compile subproject "Hardware" and "LookAndBehavior"
      since they are not usable.
    * Use unicode to make sure the acute is right.

2007-02-11  Quentin Mathe <qmathe@club-internet.fr>

    * Controller.h
    * Controller.m
    (-sleep:, -shutDown:, -reboot:): New placeholder action methods to be 
    filled later.